# tshell

./: CMakeLists.txt  LICENSE  README.md  TShell.cpp  TShell.h  TShellConfig.h  main.cpp  tshell.config
commands/: BackCommand.h  BaseCommand.h  ExitCommand.h  HelpCommand.h  ICommand.h  RunCommand.h  SearchCommand.h  SetCommand.h  ShowCommand.h  UseCommand.h
modules/: IModule.h  LsModule.h  ModuleParams.cpp  ModuleParams.h
utils/: Colors.h  TokenUtils.h
